Actually copy seed folder in the runner image

--- a/fly.toml
+++ b/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "rendermode-recipe"
+app = "rw-rendermode-recipe"
 kill_signal = "SIGINT"
 kill_timeout = 5
 primary_region = "ams"
